--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include MANIFEST.in LICENSE README.rst
+include MANIFEST.in LICENSE README.rst NEWS
 include metamagic/json/_encoder/_encoder.c
 include metamagic/json/_encoder/_encoder.h
 include metamagic/json/_encoder/_encoder_buffer.c
